--- a/index.html
+++ b/index.html
@@ -1,31 +1,94 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Pedido de Productos</title>
-    <style>
-      body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
-      h2 { margin-top: 20px; }
-      input[type="text"], input[type="number"], input[type="email"], select {
-        width: 100%; padding: 8px; margin: 4px 0 10px;
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Pedido - Global Energy</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    .container {
+      background: #fff;
+      max-width: 800px;
+      margin: auto;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.08);
+    }
+    img.logo {
+      display: block;
+      margin: 0 auto 30px;
+      max-width: 220px;
+    }
+    h2 {
+      text-align: center;
+      color: #E67E22;
+    }
+    label {
+      display: block;
+      margin-top: 12px;
+      font-weight: bold;
+    }
+    input[type="text"], input[type="email"], input[type="number"], select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px 0;
+    }
+    th {
+      background-color: #E67E22;
+      color: white;
+      padding: 10px;
+    }
+    td {
+      border: 1px solid #ccc;
+      padding: 8px;
+    }
+    button {
+      background-color: #E67E22;
+      color: white;
+      font-weight: bold;
+      padding: 14px 28px;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      font-size: 16px;
+      display: block;
+      margin: 30px auto 0;
+    }
+    .category h3 {
+      margin-top: 40px;
+      color: #E67E22;
+      border-bottom: 2px solid #E67E22;
+      padding-bottom: 5px;
+    }
+  </style>
+  <script>
+    function toggleDireccion() {
+      const checkbox = document.getElementById('retiro');
+      const direccionInput = document.getElementById('direccion');
+      direccionInput.disabled = checkbox.checked;
+      if (checkbox.checked) {
+        direccionInput.value = '';
       }
-      table { width: 100%; border-collapse: collapse; margin-bottom: 15px; }
-      th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
-      th { background-color: #f2f2f2; }
-      button { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; cursor: pointer; }
-      .category { margin-top: 30px; }
-    </style>
-    <script>
-      function toggleDireccion() {
-        const checkbox = document.getElementById('retiro');
-        const direccionInput = document.getElementById('direccion');
-        direccionInput.disabled = checkbox.checked;
-        if (checkbox.checked) {
-          direccionInput.value = '';
-        }
-      }
-    </script>
-  </head>
-  <body>
+    }
+  </script>
+</head>
+<body>
+  <div class="container">
+    <img src="logo-global.png" alt="Global Energy" class="logo">
     <h2>Formulario de Pedido</h2>
     <form method="POST" action="https://n8n.srv867060.hstgr.cloud/webhook/478714e6-d399-43e0-9742-553eaf1d28e3">
       <label>Nombre o Razón Social *</label>
@@ -43,10 +106,9 @@
       <label>Dirección de entrega *</label>
       <input type="text" id="direccion" name="direccion" required>
 
-      <div style="margin: 10px 0;">
-  <input type="checkbox" id="retiro" onclick="toggleDireccion()">
-  <label for="retiro">Retira en depósito</label>
-</div>
+      <label>
+        <input type="checkbox" id="retiro" onclick="toggleDireccion()"> Retira en depósito
+      </label>
 
       <label>Forma de pago *</label>
       <select name="forma_pago" required>
@@ -117,5 +179,6 @@
 
       <button type="submit">Enviar Pedido</button>
     </form>
-  </body>
+  </div>
+</body>
 </html>
