--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-3">
   <title>Formulario de Pedido - Global Energy</title>
   <style>
     body {
@@ -70,7 +70,7 @@
 
   <h1><img src="logo_global.png" alt="Logo Global Energy" height="60"> Pedido Global Energy</h1>
 
-  <form action="https://n8n.srv867060.hstgr.cloud/webhook/FORM-PATH" method="POST">
+  <form action="https://n8n.srv867060.hstgr.cloud/webhook-test/FORM-PATH" method="POST">
     
     <h2>Datos del Cliente</h2>
     
