--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-3">
   <title>Formulario de Pedido - Global Energy</title>
   <style>
-    body {
-      font-family: "Helvetica Neue", sans-serif;
-      margin: 0;
-      padding: 2rem;
-      background-color: #fff;
-      color: #000;
+    /* Hacemos que el contenido no sea tan ancho */
+body {
+  font-family: 'Helvetica Neue', sans-serif;
+  background-color: #fff;
+  color: #000;
+  padding: 20px;
+  max-width: 900px;   /* ACA ES EL CAMBIO CLAVE */
+  margin: 0 auto;
     }
     h2 {
       color: #f57c00;
