--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
 </head>
 <body>
 
-  <h1><img src="logo_global.png" alt="Logo Global Energy" height="60"> Pedido Global Energy</h1>
+  <h1><img src="logo-global.png" alt="Logo Global Energy" height="150"> Pedido Global Energy</h1>
 
   <form action="https://n8n.srv867060.hstgr.cloud/webhook-test/FORM-PATH" method="POST">
     
@@ -415,9 +415,10 @@ body {
 </table>
 <!-- Categoría: Varios -->
 <h2 class="category-title">Varios</h2>
-<table class="product-table">
+<table>
   <thead>
     <tr>
+      <th>Producto</th>
       <th>Caja</th>
     </tr>
   </thead>
