--- a/index.html
+++ b/index.html
@@ -414,29 +414,36 @@ body {
   </tbody>
 </table>
 <!-- Categoría: Varios -->
-<h2 class="category-title">Varios</h2>
+<h3>Varios</h3>
 <table>
   <thead>
-    <tr>
-      <th>Producto</th>
-      <th>Caja</th>
+    <tr style="background-color: #FFA500; color: #fff;">
+      <th style="padding: 10px; text-align: left;">Producto</th>
+      <th style="padding: 10px; text-align: left;">Caja</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>TOTAL HBF 3</td>
-      <td><input type="number" name="hbf3_caja" min="0"></td>
+      <td style="padding: 8px;">TOTAL HBF 3</td>
+      <td style="padding: 8px;">
+        <input type="number" name="hbf3_caja" min="0" style="width: 80px; padding: 5px; border-radius: 5px; border: 1px solid #ccc;">
+      </td>
     </tr>
     <tr>
-      <td>TOTAL HBF 4</td>
-      <td><input type="number" name="hbf4_caja" min="0"></td>
+      <td style="padding: 8px;">TOTAL HBF 4</td>
+      <td style="padding: 8px;">
+        <input type="number" name="hbf4_caja" min="0" style="width: 80px; padding: 5px; border-radius: 5px; border: 1px solid #ccc;">
+      </td>
     </tr>
     <tr>
-      <td>TOTAL VISION</td>
-      <td><input type="number" name="vision_caja" min="0"></td>
+      <td style="padding: 8px;">TOTAL VISION</td>
+      <td style="padding: 8px;">
+        <input type="number" name="vision_caja" min="0" style="width: 80px; padding: 5px; border-radius: 5px; border: 1px solid #ccc;">
+      </td>
     </tr>
   </tbody>
 </table>
+
 <!-- Botón de Envío -->
 <div class="form-footer">
   <button type="submit" class="submit-button">Enviar Pedido</button>
