--- a/index.html
+++ b/index.html
@@ -427,32 +427,26 @@ body {
   </tbody>
 </table>
 <!-- Categoría: Varios -->
-<h3>Varios</h3>
-<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+<h2 class="category-title">Varios</h2>
+<table class="product-table">
   <thead>
-    <tr style="background-color: #f90; color: white;">
-      <th style="text-align: left; padding: 10px;">Producto</th>
-      <th style="text-align: left; padding: 10px;">Caja</th>
+    <tr>
+      <th>Producto</th>
+      <th>Caja</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="padding: 8px;">TOTAL HBF 3</td>
-      <td style="padding: 8px;">
-        <input type="number" name="hbf3_caja" min="0" style="width: 70px; padding: 5px; border: 1px solid #ccc; border-radius: 5px;">
-      </td>
+      <td>TOTAL HBF 3</td>
+      <td><input type="number" name="hbf3_caja" min="0"></td>
     </tr>
     <tr>
-      <td style="padding: 8px;">TOTAL HBF 4</td>
-      <td style="padding: 8px;">
-        <input type="number" name="hbf4_caja" min="0" style="width: 70px; padding: 5px; border: 1px solid #ccc; border-radius: 5px;">
-      </td>
+      <td>TOTAL HBF 4</td>
+      <td><input type="number" name="hbf4_caja" min="0"></td>
     </tr>
     <tr>
-      <td style="padding: 8px;">TOTAL VISION</td>
-      <td style="padding: 8px;">
-        <input type="number" name="vision_caja" min="0" style="width: 70px; padding: 5px; border: 1px solid #ccc; border-radius: 5px;">
-      </td>
+      <td>TOTAL VISION</td>
+      <td><input type="number" name="vision_caja" min="0"></td>
     </tr>
   </tbody>
 </table>
