--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ body {
 
 <!-- Botón de Envío -->
 <div class="form-footer">
-  <button type="submit" class="submit-button">Enviar Pedido</button>
+  <button type="submit" class="submit-button">Generar Presupuesto</button>
 </div>
 </form>
 
