--- a/index.html
+++ b/index.html
@@ -211,6 +211,62 @@ body {
         <td><input type="number" name="rubia8600_bin" min="0"></td>
       </tr>
 
+      <tr>
+  <td>TEXACO DELO GOLD ULTRA S 10W40</td>
+  <td><input type="number" name="delo_ultra_10w40_balde" min="0"></td>
+  <td><input type="number" name="delo_ultra_10w40_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>TEXACO URSA PREMIUM TDX 15W40</td>
+  <td><input type="number" name="ursa_tdx_15w40_balde" min="0"></td>
+  <td><input type="number" name="ursa_tdx_15w40_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>TEXACO URSA SUPER TD 15W40 CH-4</td>
+  <td><input type="number" name="ursa_td_15w40_ch4_balde" min="0"></td>
+  <td><input type="number" name="ursa_td_15w40_ch4_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>PUMA SUPER GD 15W-40</td>
+  <td><input type="number" name="super_gd_15w40_balde" min="0"></td>
+  <td><input type="number" name="super_gd_15w40_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>PUMA HD ULTRA S 15W-40</td>
+  <td><input type="number" name="hd_ultra_s_15w40_balde" min="0"></td>
+  <td><input type="number" name="hd_ultra_s_15w40_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>PUMA HD Plus 15W-40</td>
+  <td><input type="number" name="hd_plus_15w40_balde" min="0"></td>
+  <td><input type="number" name="hd_plus_15w40_tambor" min="0"></td>
+  <td><input type="number" name="hd_plus_15w40_bin" min="0"></td>
+</tr>
+
+<tr>
+  <td>PUMA HD Super S 15W-40</td>
+  <td><input type="number" name="hd_super_s_15w40_balde" min="0"></td>
+  <td><input type="number" name="hd_super_s_15w40_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>PUMA HD Super H 15W-40</td>
+  <td><input type="number" name="hd_super_h_15w40_balde" min="0"></td>
+  <td><input type="number" name="hd_super_h_15w40_tambor" min="0"></td>
+  <td><input type="number" name="hd_super_h_15w40_bin" min="0"></td>
+</tr>
+
     </table>
 <!-- Categoría: Aceite de Transmisión -->
 <h2 class="category-title">Aceite de Transmisión</h2>
