--- a/index.html
+++ b/index.html
@@ -349,6 +349,36 @@ body {
       <td><input type="number" name="fluidmatic_xld_balde" min="0"></td>
       <td><input type="number" name="fluidmatic_xld_tambor" min="0"></td>
     </tr>
+    <tr>
+  <td>TEXACO MULTIGEAR EP-5 80W90</td>
+  <td><input type="number" name="multigear_ep5_80w90_balde" min="0"></td>
+  <td><input type="number" name="multigear_ep5_80w90_tambor" min="0"></td>
+</tr>
+
+<tr>
+  <td>TEXACO MULTIGEAR PREMIUM EP 85W140</td>
+  <td><input type="number" name="multigear_premium_85w140_balde" min="0"></td>
+  <td><input type="number" name="multigear_premium_85w140_tambor" min="0"></td>
+</tr>
+
+<tr>
+  <td>TEXACO DELO SYN ATF HD</td>
+  <td></td>
+  <td><input type="number" name="delo_syn_atfhd_tambor" min="0"></td>
+</tr>
+
+<tr>
+  <td>PUMA GEAR OIL EP 80W-90</td>
+  <td><input type="number" name="gear_oil_ep_80w90_balde" min="0"></td>
+  <td><input type="number" name="gear_oil_ep_80w90_tambor" min="0"></td>
+</tr>
+
+<tr>
+  <td>PUMA GEAR OIL EP 85W-140</td>
+  <td><input type="number" name="gear_oil_ep_85w140_balde" min="0"></td>
+  <td><input type="number" name="gear_oil_ep_85w140_tambor" min="0"></td>
+</tr>
+
   </tbody>
 </table>
 <!-- Categoría: Aceite Hidráulico -->
@@ -387,6 +417,26 @@ body {
       <td><input type="number" name="azolla_68_tambor" min="0"></td>
       <td><input type="number" name="azolla_68_bin" min="0"></td>
     </tr>
+    <tr>
+  <td>TEXACO RANDO HD 46</td>
+  <td><input type="number" name="rando_hd46_balde" min="0"></td>
+  <td><input type="number" name="rando_hd46_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>TEXACO RANDO HD 68</td>
+  <td><input type="number" name="rando_hd68_balde" min="0"></td>
+  <td><input type="number" name="rando_hd68_tambor" min="0"></td>
+  <td></td>
+</tr>
+
+<tr>
+  <td>PUMA HYDRAULIC AW ISO 68</td>
+  <td><input type="number" name="hydraulic_aw_iso68_balde" min="0"></td>
+  <td><input type="number" name="hydraulic_aw_iso68_tambor" min="0"></td>
+  <td><input type="number" name="hydraulic_aw_iso68_bin" min="0"></td>
+</tr>
   </tbody>
 </table>
 <!-- Categoría: Grasa -->
@@ -415,6 +465,12 @@ body {
       <td><input type="number" name="multis_ep2_balde" min="0"></td>
       <td><input type="number" name="multis_ep2_tambor" min="0"></td>
     </tr>
+    <tr>
+  <td>PUMA Lithium EP 2</td>
+  <td><input type="number" name="lithium_ep2_balde" min="0"></td>
+  <td><input type="number" name="lithium_ep2_tambor" min="0"></td>
+  <td></td>
+</tr>
   </tbody>
 </table>
 <!-- Categoría: Refrigerante -->
@@ -471,6 +527,12 @@ body {
       <td><input type="number" name="supra_gec_tambor" min="0"></td>
       <td></td>
     </tr>
+    <tr>
+  <td>PUMA HD Coolant 50/50</td>
+  <td><input type="number" name="hd_coolant_5050_balde" min="0"></td>
+  <td><input type="number" name="hd_coolant_5050_tambor" min="0"></td>
+  <td><input type="number" name="hd_coolant_5050_bin" min="0"></td>
+</tr>
   </tbody>
 </table>
 <!-- Categoría: Varios -->
