--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 </head>
 <body>
 
-  <h1><img src="logo-global.png" alt="Logo Global Energy" height="150"> Pedido Global Energy</h1>
+  <h1><img src="logo-global.png" alt="Logo Global Energy" height="150"> Presupuesto Global Energy</h1>
 
   <form action="https://n8n.srv867060.hstgr.cloud/webhook/478714e6-d399-43e0-9742-553eaf1d28e3" method="POST">
     
@@ -466,7 +466,7 @@ body {
       <td><input type="number" name="multis_ep2_tambor" min="0"></td>
     </tr>
     <tr>
-  <td>PUMA Lithium EP 2</td>
+  <td>PUMA LITHIUM EP 2</td>
   <td><input type="number" name="lithium_ep2_balde" min="0"></td>
   <td><input type="number" name="lithium_ep2_tambor" min="0"></td>
   <td></td>
@@ -528,7 +528,7 @@ body {
       <td></td>
     </tr>
     <tr>
-  <td>PUMA HD Coolant 50/50</td>
+  <td>PUMA HD COOLANT 50/50</td>
   <td><input type="number" name="hd_coolant_5050_balde" min="0"></td>
   <td><input type="number" name="hd_coolant_5050_tambor" min="0"></td>
   <td><input type="number" name="hd_coolant_5050_bin" min="0"></td>
